--- a/XunYuan_Application_API/XunYuan_Application_SystemManager_DataDict/pom.xml
+++ b/XunYuan_Application_API/XunYuan_Application_SystemManager_DataDict/pom.xml
@@ -3,39 +3,36 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>XunYuan_Service_Program</artifactId>
+        <artifactId>XunYuan_Application_API</artifactId>
         <groupId>top.tocchen</groupId>
         <version>1.0.0-Beta</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>XunYuan_common</artifactId>
-    <version>1.0.0-Beta</version>
+    <artifactId>XunYuan_Application_SystemManager_DataDict</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>easyexcel</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-loadbalancer</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>top.tocchen</groupId>
+            <artifactId>XunYuan_common</artifactId>
+            <version>1.0.0-Beta</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
