--- a/XunYuan_SystemManager_API/XunYuan_SystemManager_Company/pom.xml
+++ b/XunYuan_SystemManager_API/XunYuan_SystemManager_Company/pom.xml
@@ -3,27 +3,38 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>XunYuan_Service_Program</artifactId>
+        <artifactId>XunYuan_SystemManager_API</artifactId>
         <groupId>top.tocchen</groupId>
         <version>1.0.0-Beta</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>XunYuan_common</artifactId>
-    <version>1.0.0-Beta</version>
+    <artifactId>XunYuan_SystemManager_Company</artifactId>
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
@@ -33,9 +44,17 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>-->
+<!--        </dependency>-->
+
+        <!-- Import XunYuan Common -->
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>easyexcel</artifactId>
+            <groupId>top.tocchen</groupId>
+            <artifactId>XunYuan_common</artifactId>
+            <version>1.0.0-Beta</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
