--- a/XunYuan_Company_API/XunYuan_Company_Info/pom.xml
+++ b/XunYuan_Company_API/XunYuan_Company_Info/pom.xml
@@ -34,6 +34,10 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
             <groupId>top.tocchen</groupId>
             <artifactId>XunYuan_common</artifactId>
             <version>1.0.0-Beta</version>
