--- a/XunYuan_Company_API/XunYuan_Company_Info/src/main/resources/application.yml
+++ b/XunYuan_Company_API/XunYuan_Company_Info/src/main/resources/application.yml
@@ -7,10 +7,24 @@ spring:
     mongodb:
       database: xunyuan_company_db
       uri: mongodb://localhost:27017
+  redis:
+    host: localhost
+    port: 6379
+    lettuce:
+      pool:
+        max-active: 8 # 连接池最大连接数
+        max-idle: 8 # 连接池最大空闲连接数
+        min-idle: 0 # 连接池最小空闲连接数
+        max-wait: -1ms # 连接池最大阻塞等待时间，负值表示没有限制
+    password: 123456
+    database: 1
+    timeout: 2000ms
+  cache:
+    type: redis
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: localhost:11520
         username: nacos
         password: nacos
         namespace: public
