--- a/XunYuan_ManagerSystem_API/XunYuan_ManagerSystem_DataDict/src/main/resources/application.yml
+++ b/XunYuan_ManagerSystem_API/XunYuan_ManagerSystem_DataDict/src/main/resources/application.yml
@@ -9,10 +9,16 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
   redis:
-    database: 1
-    password: 123456
     host: localhost
-    port: 6479
+    port: 6379
+    lettuce:
+      pool:
+        max-active: 8 # 连接池最大连接数
+        max-idle: 8 # 连接池最大空闲连接数
+        min-idle: 0 # 连接池最小空闲连接数
+        max-wait: -1ms # 连接池最大阻塞等待时间，负值表示没有限制
+    password: 123456
+    database: 1
     timeout: 2000ms
   cache:
     type: redis
@@ -22,7 +28,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: localhost:11520
         username: nacos
         password: nacos
         group: XunYuan_Group
