--- a/XunYuan_Data_User_CV/src/main/resources/application.yml
+++ b/XunYuan_Data_User_CV/src/main/resources/application.yml
@@ -1,16 +1,30 @@
 server:
-  port: 3010
+  port: 3020
 spring:
   application:
-    name: XunYuan-User-CV-Server
+    name: XunYuan-Data-User-CV-Server
   data:
     mongodb:
       database: xunyuan_user_cv_db
       uri: mongodb://localhost:27017
+  redis:
+    host: localhost
+    port: 6379
+    lettuce:
+      pool:
+        max-active: 8 # 连接池最大连接数
+        max-idle: 8 # 连接池最大空闲连接数
+        min-idle: 0 # 连接池最小空闲连接数
+        max-wait: -1ms # 连接池最大阻塞等待时间，负值表示没有限制
+    password: 123456
+    database: 1
+    timeout: 2000ms
+  cache:
+    type: redis
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: localhost:11520
         username: nacos
         password: nacos
         namespace: public
